# AWS-Transcribe-Bedrock

./: .env.example  .flake8  .gitignore  Makefile  PROJECT_STATUS.md  README.md  README.zh.md  UPGRADE_SUMMARY.md  aws_services.py  config.py  logger.py  main.py  pyproject.toml  requirements.txt  ui.py
config/: .env.example
docs/: AWS_CREDENTIALS_SETUP.md  AWS_PROFILE_SETUP.md  BEDROCK_MODEL_ERRORS.md  DEVELOPMENT.md  INFERENCE_PROFILE_UPGRADE.md  NEW_FEATURES.md  OUTPUT_OPTIMIZATION.md  PROJECT_STRUCTURE.md  README.md  TROUBLESHOOTING.md
scripts/: diagnose_aws.py  run.py  test_inference_profiles.py  test_model_validation.py  test_new_fallback.py
src/voice_assistant/: __init__.py  aws_services.py  config.py  logger.py  main.py  output_formatter.py  speaker_text_extractor.py  ui.py
tests/: __init__.py  test_basic.py  test_config.py  test_models.py
